switch to sql server setup
add ms sql db containerized for dev purpose
add migration script from entity framework
add docker-compose to launch db & expenseapi services

--- a/ExpenseApi/appsettings.Development.json
+++ b/ExpenseApi/appsettings.Development.json
@@ -1,4 +1,5 @@
 {
+  "ConnectionString": "Server=localhost,5434;Database=ExpenseDb;User Id=sa;Password=Pass@word",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
