--- a/ExpenseApi/appsettings.json
+++ b/ExpenseApi/appsettings.json
@@ -1,4 +1,5 @@
 {
+  "ConnectionString": "Server=localhost,5434;Database=ExpenseDb;User Id=sa;Password=Pass@word",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
